--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@ background-color: hsl(0, 0%, 8%);
 </head>
 <body >
   <div class="flex1 mt-5 ml-[5vw] h-[99vh] w-[90vw] md:w-96 bg  md:ml-[40%]">
-  <img src="./1724079454270.jpeg" alt="img" class="w-28 h-28 ">
+  
+  <img src="./assets/images/1724079454270.jpeg" alt="img" class="w-28 h-28 ">
   <div class="h1">SIDDHARTH B</div>
   <div class="h2">Coimbatore, TamilNadu</div>
   <div class="h3">"FULLSTACK DEVELOPER"</div> 
