Change role from FULLSTACK to FRONTEND DEVELOPER
Updated the role from 'FULLSTACK DEVELOPER' to 'FRONTEND DEVELOPER'.

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ background-color: hsl(0, 0%, 8%);
   <img src="./assets/images/1724079454270.jpeg" alt="img" class="w-28 h-28 ">
   <div class="h1">SIDDHARTH B</div>
   <div class="h2">Coimbatore, TamilNadu</div>
-  <div class="h3">"FULLSTACK DEVELOPER"</div> 
+  <div class="h3">"FRONTEND DEVELOPER"</div> 
   <div class="flex2">
  <a href="https://github.com/Siddharthb04"><button class="button md:w-80">GitHub</button> </a> 
   <a href="www.linkedin.com/in/siddharth-b-68b9461b9"><button class="button md:w-80">LinkedIn</button> </a> 
@@ -102,3 +102,4 @@ background-color: hsl(0, 0%, 8%);
  
 </body>
 </html>
+
